<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:orientation="vertical">
    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="center"
        app:tabMode="scrollable"
        android:background="@color/semi_transparent2"
        app:tabTextColor="@android:color/white"
        app:tabSelectedTextColor="@android:color/white"
        app:tabIndicatorHeight="5dp"
        app:tabIndicatorColor="@android:color/white">
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_customize" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Guide" />
    </android.support.design.widget.TabLayout>
    <com.yez_inc.lock_me_app.lockmeapp.PanelSwitcher
        android:id="@+id/panelSwitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/transparent">
                <!-- General-->
                <Switch
                    android:text="@string/app_Enable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/enable"
                    android:layout_margin="8dp"
                    android:checked="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"

                    android:textColor="@android:color/white" />
                <LinearLayout
                    android:id="@+id/disable_system_lock_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pin_btn2"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                        android:text="@string/disable_system_lock"
                        android:textColor="@android:color/white" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:text="@string/disable_system_lock_summary"/>
                </LinearLayout>
                <Switch
                    android:text="@string/show_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/show_notifications"
                    android:layout_margin="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                    android:textColor="@android:color/white" />
                <Switch
                    android:text="@string/pref_title_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vibrate"
                    android:layout_margin="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                    android:textColor="@android:color/white" />
                <Switch
                    android:text="@string/seu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hidden"
                    android:layout_margin="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                    android:textColor="@android:color/white" />
                <Switch
                    android:text="@string/skip_gestures_on_security"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/skip"
                    android:layout_margin="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                    android:textColor="@android:color/white" />
                <Switch
                    android:text="@string/double_tap_to_sleep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sleep"
                    android:layout_margin="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                    android:textColor="@android:color/white" />
                <Button
                    android:id="@+id/lock_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/lock_now"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />
            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/transparent">
                <!--Security-->
                <LinearLayout
                    android:id="@+id/change_code_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pin_btn2"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                        android:text="@string/pref_change_pass_code"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:text="@string/pref_change_pass_code_summary"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/forgot_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pin_btn2"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                        android:text="@string/pref_header_security"
                        android:textColor="@android:color/white" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:text="@string/pref_header_Forgot_summary"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/transparent">
                <!--Personalization-->
                <LinearLayout
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pin_btn2"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                        android:text="@string/pref_choose_background"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:text="@string/pref_background_summary"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/displayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pin_btn2"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                        android:text="@string/pref_display_name"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:text="@string/set_display_name"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/screenTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pin_btn2"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
                        android:text="@string/pref_Theme_Color"
                        android:textColor="@android:color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:text="@string/pref_Theme_Color_summary"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/transparent">
                <!--Guide-->
                <include
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    layout="@layout/layout_help"/>
            </LinearLayout>
        </ScrollView>
    </com.yez_inc.lock_me_app.lockmeapp.PanelSwitcher>
</LinearLayout>