<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/pref_email"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send"
            android:text="@string/send"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom|center_horizontal"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:minHeight="45dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_margin="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_answer_question"
            android:layout_margin="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
        <Spinner
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>
        <EditText
            android:hint="@string/pref_answer"
            android:inputType="text"
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>
        <EditText
            android:hint="@string/pref_answer"
            android:inputType="text"
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:textSize="18sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verify"
            android:text="@string/verify"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_gravity="bottom|center_horizontal"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:minHeight="45dp" />
    </LinearLayout>
</ScrollView>