<?xml version="1.0"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:id="@+id/cl"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/five_dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/ic_phone_missed_24dp"/>
        <TextView
            android:id="@+id/calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:text="@string/n0"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:textColor="#ffffff"
            android:text="@string/b"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:background="@drawable/ic_email_24dp"/>
        <TextView
            android:id="@+id/MSGs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five_dp"
            android:text="@string/n0"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cl2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:orientation="vertical"
        android:layout_below="@id/cl"
        android:padding="@dimen/two_dp">
        <TextView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/five_dp"
            android:text="@string/clear_all"
            android:layout_gravity="end"
            android:textColor="@android:color/white"
            android:visibility="gone"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_hundred_fifty_five_dp"
            android:layout_marginTop="@dimen/eight_dp">
            <LinearLayout
                android:id="@+id/notifications"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/two_dp">
                <com.yez_inc.lock_me_app.lockmeapp.NotificationElement
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <TextView
        android:id="@+id/carrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:textSize="@dimen/date_textSize"
        android:typeface="sans"/>
    <TextView
        android:id="@+id/my_swipe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/swipe_to_unlock"
        android:textColor="@android:color/white"
        android:layout_above="@id/carrier" />
</RelativeLayout>